--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 </header>
  
 <main>
-<p>Hello everyone and welcome to my website, my name is Afraa Othman, a 24 years old female, I'm Jordanian and I live in my beloved Amman, I'm intrested in learning new things and to improve my skills and that is the reason behind entring the software development field, besides, below are my personal key achievements:</p> 
-
+<p>Hello everyone and welcome to my website</p>
       <ul>
+      <li>My name is Afraa Othman</li>
+      <li>A 24 years old female</li>
+      <li>I'm Jordanian and I live in my beloved Amman</li>
+      <li>I'm intrested in learning new things and to improve my skills and that is the reason behind entring the software development field</li>
       <li>High school at alaqeeq school</li>
       <li>Bachelor degree in medical analysis from the university of Jordan</li>
       <li>Worked as a content writer at Telescope productions 4-9/2019</li>
@@ -28,6 +31,19 @@
       <li>Software development course 3-2021</li>
     </ul>
 
+      <p>I like watching series in my free time and below is my top 10 series:</p>
+    <ol>
+        <li>Vampire diaries</li>
+        <li>CSI Miami</li>
+        <li>CSI NY</li>
+        <li>Emily in paris</li>
+        <li>Between</li>
+        <li>Good girls</li>
+        <li>Designated Survivour</li>
+        <li>Anne with an E</li>
+        <li>Software development course 3-2021</li>
+        <li>Phi</li>
+      </ol>
  
 </main>
 
